multiple changes and docker file added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 spring.application.name=eazyconcept
-spring.datasource.url=jdbc:mysql://localhost:3306/eazyconcept
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://sql.freedb.tech/freedb_obi_db
+#spring.datasource.username=freedb_obinna
+#spring.datasource.password=?yGQfm8YU4H%cbs
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+##spring.datasource.url=jdbc:mysql://localhost:3306/eazyconcept
+spring.datasource.url=jdbc:postgresql://dpg-cr2eafjv2p9s7396i760-a.oregon-postgres.render.com:5432/grademaster_db
+spring.datasource.username=grademaster_db_user
+spring.datasource.password=ADC899o58K1TwWeuzGAgIfirfUdQlXMU
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.max-lifetime=2700000
+
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
@@ -12,6 +22,7 @@ logging.level.org.springframework.security=debug
 spring.servlet.multipart.max-file-size=16MB
 spring.servlet.multipart.max-request-size=16MB
 
+#mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.username=izzykoncept042@gmail.com
